# pyperfectforesight

./: .gitignore  AUXILIARY_VARIABLES.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  setup.py  setup_conda_env.sh  test_arbitrary_lags.py  test_custom_endval.py  test_dynare_expectation_errors.py  test_dynare_rbc.py  test_expectation_errors.py  test_homotopy.py
.github/workflows/: docs.yml
docs/: AUXILIARY_VARIABLES.md  api-reference.md  auxiliary-variables.md  conf.py  getting-started.md  index.md  initial-guess.md  installation.md  solvers.md
dynare_python/: __init__.py  __version__.py  core.py
dynare_ref_output/: .gitignore
examples/: rbc_demo.py  rbc_with_government.py  rbc_with_investment.py
mod_files/: .gitignore  dynare_rbc_reference.csv  perfect_foresight_rbc.mod
pyperfectforesight/: __init__.py  __version__.py  core.py
scripts/: benchmark.py  benchmark_dynare.mod  compare_auto_to_dynamic.py  compare_aux_methods.py  compare_dynamic_fallback.py
tests/: test_arbitrary_lags.py  test_auto_to_dynamic.py  test_compile_steady_state.py  test_custom_endval.py  test_dynamic_fallback.py  test_dynare_expectation_errors.py  test_dynare_rbc.py  test_expectation_errors.py  test_homotopy.py  test_make_initial_guess.py  test_methods_comparison.py  test_steady_state.py
tests/dynare_ref_output/: perfect_foresight_expectation_errors_output.csv
